# work_project_1

./: .flake8  .gitignore  README.md  main.py  pyproject.toml
src/: utils.py
src/func/: help_func.py  interactive_with_user.py
src/integration_api/: class_for_api.py  classes_for_services.py  service.py
src/vacancy/: class_vacancy.py  vacancies_list.py
src/write_json/: base_class.py  work_with_data.py
tests/: test_class_vacancy.py  test_func.py  test_service.py  test_vacancies_list.py  test_work_with_data.py
