[tool.poetry]
name = "checking-project"
version = "0.1.0"
description = ""
authors = ["Ivan <jaloylee@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# Максимальная длина строки
line_length = 119
# Файлы, которые не нужно форматоровать
exclude = '.git'

[tool.isort]
# Максимальная длина строки
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'