[tool.poetry]
name = "checking-project"
version = "0.1.0"
description = ""
authors = ["Ivan <jaloylee@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
mypy = "^1.13.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.lint.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pathlib = "^1.0.1"
pandas = "^2.2.3"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# Максимальная длина строки
line_length = 119
# Файлы, которые не нужно форматоровать
exclude = '.git'

[tool.isort]
# Максимальная длина строки
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'